Fix: enforce the back button clipping fix only on TV layout

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1054,6 +1054,6 @@ div[data-role=controlgroup] a.ui-btn-active {
     background-color: var(--selectorBackgroundColor);
 }
 
-.headerLeft, .skinHeader {
-overflow: unset;
+.layout-tv .headerLeft {
+    overflow: unset;
 }
